--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     <a title="linkedin" href="https://www.linkedin.com/in/catherine-yang52" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a title="some coding" href="https://github.com/wonyuan" target="_blank"><i class="fa fa-github fa-2x"></i></a>
                     <a title="contact me" href="https://www.instagram.com/57cathe/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                    <a title="misc" href="https://www.bento.me/cath" target="_blank"><i class="fa fa-folder fa-2x"></i></a>
                     </div>
                 </div>
 
@@ -44,7 +43,7 @@
                     <br>
                     <br>
                     <br>
-                    <h1>i'm catherine yang,
+                    <h1>I'm Tvesha Shah,
                     <br>
                     <div class="carousel"><span class="txt-rotate" data-period="2000"
                     data-rotate='[ "a student", "a product designer", "a food addict", "a learner" ]'></span>&nbsp;★</div>
