--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Catherine Yang </title>
+        <title> Tvesha Shah </title>
         <link rel="shortcut icon" type="image/png" href="images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
