--- a/Other.html
+++ b/Other.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Catherine Yang </title>
-        <link rel="shortcut icon" type="image/png" href="images/icons8-apple-16.png">
+        <title> Tvesha Shah </title>
+        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -22,10 +22,10 @@
                 <a title="about me!" href="index.html"><div class="header-logo hbtn-five"></div></a>
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
-                    <div class="hbtn hbtn-one"><a class href="experience.html">1. about</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. projects </div></a>
-                    <div class="hbtn hbtn-three"><a class href="uxui.html"> 3. UX/UI </div></a>
-                    <div class="hbtn hbtn-three hbtn-active"><a class href="design.html"> 3. graphic design </div></a>
+                    <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
+                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
+                    <div class="hbtn hbtn-three hbtn-active"><a class href="Other.html"> 4. Other Intrests </div></a>
                 </div> 
             </div>
         <div class="content"> 
@@ -42,7 +42,7 @@
 
                 <div class="graphic-one">
                     <div class="grp-img">
-                        <span></span><img src="images/graphic1.svg"class="header-icon-h2"/></span>
+                        <span></span><img src="Images/graphic1.svg"class="header-icon-h2"/></span>
                     </div>
                 </div>
 
