--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="image/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -22,10 +22,10 @@
                 <a title="about me!" href="index.html"><div class="header-logo hbtn-five"></div></a>
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
-                    <div class="hbtn hbtn-one"><a class href="experience.html">1. about</div></a>
-                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. projects </div></a>
-                    <div class="hbtn hbtn-three"><a class href="uxui.html"> 3. UX/UI </div></a>
-                    <div class="hbtn hbtn-three"><a class href="design.html"> 3. graphic design </div></a>
+                    <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
+                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests</div></a>
 
                 </div> 
             </div>
@@ -33,7 +33,7 @@
             <div class="projects-wrapper" style="overflow-y:scroll;">
                 <h2> some of my
                     <span><img src="images/blob.svg" class="header-icon-h2"/></span>
-                    <a href="https://github.com/wonyuan" class="underline-link">projects</a>!
+                    <a href="https://github.com/txshah" class="underline-link">projects</a>!
                     <br>
                 </h2>
                 <div class="projects-content-one">
@@ -48,9 +48,9 @@
                         </h4>
                         </a>
                         <h5>
-                            Designed a custom wind turbine for a developing
-                            off-the-grid county that prioritized durability, low-cost, 
-                            and high efficiency to be built in Quetzaltenango.
+                            For this project, my team worked to design a custom wind turbine that can harness kinetic energy from the rooftops of civilians' homes. 
+                            The goal is to develop a wind turbine that produces energy that ensures maximum efficiency and reliability while prioritizing durability, portability, and affordability. 
+                            This must all be done while ensuring that the size and weight of the design are small enough to fit on a residential rooftop easily and the blade material can withstand Calgary's high wind conditions and environmental factors.
                         </h5>
                     </div>
                     <div class="project-desc">
@@ -59,13 +59,15 @@
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
                         <h4>
-                            Power in Community <img src="images/reshot.svg" class="arrow-img"/>
+                            Health Care Challenge <img src="images/reshot.svg" class="arrow-img"/>
                         </h4>
                         </a>
                         <h5>
-                            Designed and developed an affordable and accesible tectron stylus  
-                            to assists individuals with limited fine motor skills in 
-                            comfortably interacting with technology.
+                            In this project, we focused on remote sensing and actuation for robotic arms in surgical applications. 
+                            Our team worked to design a system to transfer a surgical instrument to an autoclave for sterilization securely. 
+                            We applied the principles of rapid prototyping and physical computing to develop a computer program and prototype a container with certain specifications. 
+                            We researched the core requirements for a surgical sterilization system and used those concepts to create our solution. As a member of the coding team I worked to create a program that will sort the containers (that appear at random) and place them in the correct location.
+                            This is virtual environment is similar to how sterilization sorting could be executed in the real world. 
                         </h5>
                     </div>
                     <div class="project-desc">
@@ -74,14 +76,15 @@
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
                         <h4>
-                            Automated Recycling System
+                            Sustainability Challenge
                             <span><img src="images/reshot.svg" class="arrow-img"/></span>
                         </h4>
                         </a>
                         <h5>
-                            Developed a robotic sorting system to classify containers by 
-                            material, mass, and contamination utilizing Qbots, sensors,
-                            and Python.
+                            For this project, my team developed a robotic sorting system to classify containers by 
+                            material, mass, and contamination utilizing Qbots, sensors, and Python.
+                            Our goal was to design a system for sorting and recycling containers to filter different materials and contamination levels effectively. 
+                            This allows recycling plants to execute the proper recycling processes and limit the amount of waste harming our planet
                         </h5>
                     </div>
                 </div>
@@ -93,14 +96,16 @@
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
                         <h4>
-                            Get A Grip
+                            Community Challenge
                             <span><img src="images/reshot.svg" class="arrow-img"/></span>
                         </h4>
                         </a>
                         <h5>
-                            Redesigning and 3D modelling a container to hold surgical tools 
-                            that can be automatically desterilized with the aid of a 
-                            custom-programmed robotic arm.
+                            This project was a part of the IMPACT (Interdisciplinary, Mentorship, Practice, Applied, Community, Transformative) initiative, and through this process, we were introduced to our amazing clients, Tim and Kim. 
+                            Specifically, my team focused on Tim and products that would help support his visual impairment. 
+                            So, throughout the past few months, both in and outside design studios, my team and I worked together to design and create a product to help him better use his television remote. 
+                            Currently, he often relies on muscle memory when using his TV remote and cannot utilize many functions. So, by incorporating an audibility function through touch sensors, we created a device that will allow him to hear each button's functionality before pushing it. 
+                            Our overall device was a durable, audible, and easy-to-use product that improved the accessibility of how he used the television remote in his home.
                         </h5>
                     </div>
                     <div class="project-desc">
@@ -115,7 +120,7 @@
                         </a>
                         <h5>
                             Created the website that you're looking at using basic HTML, CSS and JS
-                            and UX/UI principles, as a way to showcase my projects and practice
+                            and design principles, as a way to showcase my projects and practice
                             web development!
                         </h5>
 
