--- a/Past Coop's.html
+++ b/Past Coop's.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="image/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -22,10 +22,10 @@
                 <a title="about me!" href="index.html"><div class="header-logo hbtn-five"></div></a>
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
-                    <div class="hbtn hbtn-one"><a class href="experience.html">1. about</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. projects </div></a>
-                    <div class="hbtn hbtn-three hbtn-active"><a class href="uxui.html"> 3. UX/UI </div></a>
-                    <div class="hbtn hbtn-three"><a class href="design.html"> 3. graphic design </div></a>
+                    <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
+                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three hbtn-active"><a class href="Past Coop's.html"> 3. Past Coops</div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests </div></a>
                 </div> 
             </div>
         <div class="content"> 
