--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="image/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -22,10 +22,10 @@
                 <a title="about me!" href="index.html"><div class="header-logo hbtn-five"></div></a>
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
-                    <div class="hbtn hbtn-one hbtn-active"><a class href="experience.html">1. about</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. projects </div></a>
-                    <div class="hbtn hbtn-three"><a class href="uxui.html"> 3. UX/UI </div></a>
-                    <div class="hbtn hbtn-three"><a class href="design.html"> 3. graphic design </div></a>
+                    <div class="hbtn hbtn-one hbtn-active"><a class href="experience.html">1. About</div></a>
+                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests</div></a>
                 </div> 
             </div>
         <div class="content"> 
@@ -38,7 +38,7 @@
                       <div class="top"></div>
                       <div class="bottom"></div>
                     </div>
-                    <div class="title">(o` ▽ ´o)ﾉ</div>
+                    <div class="title">(":)")ﾉ</div>
                     <br>
                     <div class="num"> 01.
                         <br>
@@ -50,16 +50,15 @@
                     </div>
                     <div class="exp-abt"> 
                         <h3>
-                            hello! i'm a current 2nd year software  
-                            engineering student at mcmaster! when i'm 
+                            Hi! I'm a current 2nd year software  
+                            engineering student at McMaster University! when i'm 
                             not working, you can probably find me 
-                            drawing, jogging, or playing games w/ friends!
+                            reading, swimming, or hanging out w/ friends!
                             <br>
                             <br>
-                            i'm currently learning more about machine learning
-                            and how to make meaningful interactions w/ UX design!
-                            whether you're a mentor or a student looking
-                            to connect with other passionate people, let's talk! 
+                            I'm currently learning more about machine learning
+                            and how to make meaningful interactions w/ AI technology!
+                            I am always intrested in connecting with like minded individuals who are passionate about technology, so please reach out! 
                             <br>
                         </h3>
                     </div>
