--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="Images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -34,7 +34,6 @@
                     <div class="links">
                     <a title="linkedin" href="https://www.linkedin.com/in/tvesha-shah-61677819b/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a title="some coding" href="https://github.com/txshah" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-                    <a title="contact me" href="shaht28@mcmaster.ca" target="_blank"><i class="fa fa-email fa-2x"></i></a>
                     </div>
                 </div>
 
