--- a/Other.html
+++ b/Other.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="Images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
