--- a/Past Coop's.html
+++ b/Past Coop's.html
@@ -33,7 +33,7 @@
                 <h1> 
                     <div class="graphic-one">
                         <div class="grp-img">
-                            <span></span><img src="images/graphic6.svg"class="header-icon-h2"/></span>
+                            <span></span><img src="Images/graphic6.svg"class="header-icon-h2"/></span>
                             <div class = "image-txt"></div>
                         </div>
                     </div>
