--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,7 @@
                       <div class="top"></div>
                       <div class="bottom"></div>
                     </div>
-                    <div class="title">(":)")ﾉ</div>
+                    <div class="title">("About me!")ﾉ</div>
                     <br>
                     <div class="num"> 01.
                         <br>
