--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="Images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -32,19 +32,19 @@
         <div class="content"> 
             <div class="projects-wrapper" style="overflow-y:scroll;">
                 <h2> some of my
-                    <span><img src="images/blob.svg" class="header-icon-h2"/></span>
+                    <span><img src="Images/blob.svg" class="header-icon-h2"/></span>
                     <a href="https://github.com/txshah" class="underline-link">projects</a>!
                     <br>
                 </h2>
                 <div class="projects-content-one">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
-                            <img src="images/turbine.png" class="projects-img">
+                            <img src="Images/turbine.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
                         <h4>
                             Renewable Technology Challenge
-                            <img src="images/reshot.svg" class="arrow-img"/>
+                            <img src="Images/reshot.svg" class="arrow-img"/>
                         </h4>
                         </a>
                         <h5>
@@ -55,11 +55,11 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
-                        <img src="images/stylus.png" class="projects-img">
+                        <img src="Images/stylus.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
                         <h4>
-                            Health Care Challenge <img src="images/reshot.svg" class="arrow-img"/>
+                            Health Care Challenge <img src="Images/reshot.svg" class="arrow-img"/>
                         </h4>
                         </a>
                         <h5>
@@ -72,12 +72,12 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce">
-                        <img src="images/recycle.png" class="projects-img">
+                        <img src="Images/recycle.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
                         <h4>
                             Sustainability Challenge
-                            <span><img src="images/reshot.svg" class="arrow-img"/></span>
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
                         </h4>
                         </a>
                         <h5>
@@ -92,12 +92,12 @@
                 <div class="projects-content-two">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b">
-                            <img src="images/robot.png" class="projects-img">
+                            <img src="Images/robot.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
                         <h4>
                             Community Challenge
-                            <span><img src="images/reshot.svg" class="arrow-img"/></span>
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
                         </h4>
                         </a>
                         <h5>
@@ -110,12 +110,12 @@
                     </div>
                     <div class="project-desc">
                         <a href="index.html">
-                        <img src="images/port.png" class="projects-img">
+                        <img src="Images/port.png" class="projects-img">
                         </a>
                         <a href="index.html" class="hover-underline-link">
                         <h4>
                             Personal Portfolio
-                            <img src="images/reshot.svg" class="arrow-img"/>
+                            <img src="Images/reshot.svg" class="arrow-img"/>
                         </h4>
                         </a>
                         <h5>
