--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
                     <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
-                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coop's </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
                     <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests </div></a>
                 </div> 
             </div>
