--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         <script src="jquery.style-my-tooltips.js"></script>
         <link href="style-my-tooltips.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="apple-touch-icon" href="icons8-apple-16.png">
+        <link rel="apple-touch-icon" href="Images/icons8-apple-16.png">
     </head>
 
     <body>
