--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="Images/png" href="images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="Images/png" href="Images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -13,7 +13,7 @@
         <script src="jquery.style-my-tooltips.js"></script>
         <link href="style-my-tooltips.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="apple-touch-icon" href="icons8-apple-16.png">
+        <link rel="apple-touch-icon" href="Images/icons8-apple-16.png">
     </head>
 
     <body>
