--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="content" > 
             <div class="abt-one">
                 <div class="abt-photo">
-                    <img src="Images/profile.png>
+                    <img src="/Users/tveshashah/Documents/GitHub/txshah.github.io/Images/profile.png">
                     <div class="links">
                     <a title="linkedin" href="https://www.linkedin.com/in/tvesha-shah-61677819b/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a title="some coding" href="https://github.com/txshah" target="_blank"><i class="fa fa-github fa-2x"></i></a>
