--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title> Tvesha Shah </title>
-        <link rel="shortcut icon" type="Images/png" href="Images/icons8-apple-16.png">
+        <link rel="shortcut icon" type="image/png" href="Images/icons8-apple-16.png">
         <link rel="stylesheet" href="style-main.css">
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="style-about.css">
@@ -30,7 +30,7 @@
         <div class="content" > 
             <div class="abt-one">
                 <div class="abt-photo">
-                    <img src="/Users/tveshashah/Documents/GitHub/txshah.github.io/Images/profile.png">
+                    <img src="Images/profile.png">
                     <div class="links">
                     <a title="linkedin" href="https://www.linkedin.com/in/tvesha-shah-61677819b/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a title="some coding" href="https://github.com/txshah" target="_blank"><i class="fa fa-github fa-2x"></i></a>
