--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     studying software engineering at mcmaster university! </h1>
                     <br> 
                     <h3> hello! i'm a student based in vaughan ontario,  
-                      with a strong interest in learning about new technological advancements 
-                      and how changes in tech can positvily imapct tht world!
+                      with a strong interest in learning about new innovations
+                      and how changes in tech can positvily imapact the world!
                       
                     <br>
                 
