--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     <h1>I'm Tvesha Shah,
                     <br>
                     <div class="carousel"><span class="txt-rotate" data-period="2000"
-                    data-rotate='[ "a student", "a software engineer", "a avid reader", "a learner" ]'></span>&nbsp;★</div>
-                    studying software engineering at mcmaster university! </h1>
+                    data-rotate='[ "a student", "a innovator", "a avid reader", "a learner" ]'></span>&nbsp;★</div>
+                    studying software engineering at McMaster University! </h1>
                     <br> 
-                    <h3> hello! i'm a student based in vaughan ontario,  
+                    <h3> Hi! my name is Tvesha Shah and I'm a student based in Vaughan Ontario,  
                       with a strong interest in learning about new innovations
-                      and how changes in tech can positvily imapact the world!
+                      and how changes in tech can positvily impact the world!
                       
                     <br>
                 
