--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <br> 
                     <h3> Hi! my name is Tvesha Shah and I'm a student based in Vaughan Ontario,  
                       with a strong interest in learning about new innovations
-                      and how changes in tech can positvily impact the world!
+                      and how changes in tech can positively impact the world!
                       
                     <br>
                 
