--- a/Other.html
+++ b/Other.html
@@ -23,32 +23,113 @@
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
                     <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
-                    <div class="hbtn hbtn-three hbtn-active"><a class href="Other.html"> 4. Other Intrests </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests</div></a>
+
                 </div> 
             </div>
         <div class="content"> 
             <div class="projects-wrapper" style="overflow-y:scroll;">
-                <h1> 
-                    where all my illustrations go.
-                    <br>
-                </h1>
-                <h6>
-                    every graphic in this portfolio was
-                    <br>
-                     made with figma & adobe illustrator!
-                </h6>
+                <h2> Other Intrests! 
+                </h2>
+                <div class="projects-content-one">
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
+                            <img src="Images/turbine.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
+                        <h4>
+                            McMaster Formula Electric Team
+                            <img src="Images/reshot.svg" class="arrow-img"/>
+                        </h4>
+                        </a>
+                        <h5>
+                            MAC Formula Electric is a student-run team from McMaster University working to design, build, and compete with a fully-electric, formula-style racecar.
 
-                <div class="graphic-one">
-                    <div class="grp-img">
-                        <span></span><img src="Images/graphic1.svg"class="header-icon-h2"/></span>
+                            Here are some skills I have learned thus far: 
+                            - Coordinate with team to configure the thermal management system of the formula electric car.
+                            - Collaborate and code with C using GitLab, document progress using Microsoft planner.
+                            - Programming microcontrollers using STM32 IDE.
+                            - Developed & debugged the Embedded Systems used to control various vehicle functions
+                            - Worked with industry-leading families of microcontrollers and development software
+                            - Wrote structured, and reliable embedded C and Python code using industry standards
+                            - Worked on the Raspberry Pi Test Bench and MCU Integration sub-project
+                        </h5>
+                    </div>
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
+                        <img src="Images/stylus.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
+                        <h4>
+                            SHAD Alumni <img src="Images/reshot.svg" class="arrow-img"/>
+                        </h4>
+                        </a>
+                        <h5>
+                            I completed the SHAD program as a member of the 2021 cohort. If I’m being honest, at first, I was hesitant to accept this offer, given the new online nature of the program. However, looking back now, I am so thankful that I decided to be a part of this life-changing experience. This summer, I was provided with an abundance of opportunities to learn new skills, grow as an individual and connect with many ambitious peers.
+
+                            With an endless supply of fantastic workshops and seminars, I was able to further my logical thinking, coding and other STEM abilities! My favourite lesson was a workshop hosted by FairPlay. This event allowed me to apply the skills I had been building up and switch adapt a toy for children with motor disabilities. This experience showed me how STEM can be used to better the lives of others and how representation in all aspects truly makes a profound difference!
+
+                            Furthermore, I was also able to listen and interact with outstanding keynote speakers. These distinguished individuals not only shared their personal journeys but also helped us discover avenues we had never thought possible!
+
+                            Last but not least, the SHAD program has allowed me to meet such amazing individuals! Through the duration of the summer, I made friendships and connections that I’m sure will last a lifetime!
+
+                            I am so thankful to the Shad Canada community for giving me this opportunity, and to my program directors, facilitators and fellow SHADs for making my SHAD experience so amazing! I can not wait to carry all the knowledge I have gained into other aspects of my life and I am incredibly proud to now call myself a SHAD alumni!
+                        </h5>
+                    </div>
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce">
+                        <img src="Images/recycle.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
+                        <h4>
+                            BETA Camp
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
+                        </h4>
+                        </a>
+                        <h5>
+                            I am excited to announce that my team and I have launched our very own start-up, and have won the title of Best Pitch! Recently, I completed the opportunity to learn business concepts and grow my own small business through Beta Camp
+
+                            Through this program, I was able to learn the basics of creating a small business and apply this knowledge with the help of my startup team. We all put a tremendous amount of effort into our passion project, Discovery Crate, and successfully launched our business's MVP (Minimal Viable Product). Currently, we have delivered our first batch of orders, and are excited to start working on our next shipment! Additionally, this program allowed us to pitch our idea to successful individuals, such as [Brennan Foo](https://www.linkedin.com/in/ACoAAAIEIKAB6jzeByWA-L2VtU6PJ7RyQhgQOjo) and [Raina Gandhi](https://www.linkedin.com/in/ACoAAAfN2GMBnJ2FXVIG_G24lm2pGz3t91OKW7s). This leads us to receive applicable feedback for our company's growth and obtain the award of Best Pitch! We can't wait to apply the feedback given by these industry titans and further grow our business into something incredible!
+
+                        </h5>
                     </div>
                 </div>
+                <br>
+                <div class="projects-content-two">
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b">
+                            <img src="Images/robot.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
+                        <h4>
+                            My State of Mind
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
+                        </h4>
+                        </a>
+                        <h5>
+                            My State of Mind is an international student-led community aiming to fight global mental health taboos, as well as advocating for mental health issues in our ever-evolving society. As the national director of Canada, I work with a team of individuals to create new awareness campaigns and launch them at an international level.
+                    </div>
+                    <div class="project-desc">
+                        <a href="index.html">
+                        <img src="Images/port.png" class="projects-img">
+                        </a>
+                        <a href="index.html" class="hover-underline-link">
+                        <h4>
+                            Fun! 
+                            <img src="Images/reshot.svg" class="arrow-img"/>
+                        </h4>
+                        </a>
+                        <h5>
+                            This section is a work in progress. Check back later! 
+                        </h5>
 
+                    </div>
+                </div>
             </div>
         </div>
-    </body>
+    
 
 
 
