--- a/experience.html
+++ b/experience.html
@@ -50,15 +50,15 @@
                     </div>
                     <div class="exp-abt"> 
                         <h3>
-                            Hi! I'm a current 2nd year software  
-                            engineering student at McMaster University! when i'm 
+                            Hi! I'm a 2nd year Software  
+                            Engineering student at McMaster University! When I'm 
                             not working, you can probably find me 
-                            reading, swimming, or hanging out w/ friends!
+                            reading, swimming, or hanging out with friends!
                             <br>
                             <br>
                             I'm currently learning more about machine learning
-                            and how to make meaningful interactions w/ AI technology!
-                            I am always intrested in connecting with like minded individuals who are passionate about technology, so please reach out! 
+                            and how to make meaningful interactions through AI technology!
+                            I am always intrested in connecting with like minded individuals who are passionate about technological innovations, so please reach out! 
                             <br>
                         </h3>
                     </div>
