--- a/Past Coop's.html
+++ b/Past Coop's.html
@@ -23,24 +23,83 @@
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
-                    <div class="hbtn hbtn-three hbtn-active"><a class href="Past Coop's.html"> 3. Past Coops</div></a>
-                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests </div></a>
+                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests</div></a>
+
                 </div> 
             </div>
         <div class="content"> 
             <div class="projects-wrapper" style="overflow-y:scroll;">
-                <h1> 
-                    <div class="graphic-one">
-                        <div class="grp-img">
-                            <span></span><img src="Images/graphic6.svg"class="header-icon-h2"/></span>
-                            <div class = "image-txt"></div>
-                        </div>
+                <h2> some of my
+                    <a href="https://github.com/txshah" class="underline-link">projects</a>!
+                    <br>
+                </h2>
+                <div class="projects-content-one">
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
+                            <img src="Images/turbine.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
+                        <h4>
+                            Multimatic Inc (Summer 2023) 
+                            <img src="Images/reshot.svg" class="arrow-img"/>
+                        </h4>
+                        </a>
+                        <h5>
+                            For this project, my team worked to design a custom wind turbine that can harness kinetic energy from the rooftops of civilians' homes. 
+                            The goal is to develop a wind turbine that produces energy that ensures maximum efficiency and reliability while prioritizing durability, portability, and affordability. 
+                            This must all be done while ensuring that the size and weight of the design are small enough to fit on a residential rooftop easily and the blade material can withstand Calgary's high wind conditions and environmental factors.
+                        </h5>
                     </div>
-                    
-                </h1>
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
+                        <img src="Images/stylus.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
+                        <h4>
+                            Summer 2024 <img src="Images/reshot.svg" class="arrow-img"/>
+                        </h4>
+                        </a>
+                        <h5>
+                            This section is a work in progress. Come back later! 
+                        </h5>
+                    </div>
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce">
+                        <img src="Images/recycle.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
+                        <h4>
+                            Summer 2025
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
+                        </h4>
+                        </a>
+                        <h5>
+                            This section is a work in progress. Come back later! 
+                        </h5>
+                    </div>
+                </div>
+                <br>
+                <div class="projects-content-two">
+                    <div class="project-desc">
+                        <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b">
+                            <img src="Images/robot.png" class="projects-img">
+                        </a>
+                        <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
+                        <h4>
+                            1 Year Coop experience 
+                            <span><img src="Images/reshot.svg" class="arrow-img"/></span>
+                        </h4>
+                        </a>
+                        <h5>
+                            This section is a work in progress. Come back later! 
+                        </h5>
+                    </div>
+                </div>
             </div>
         </div>
+    
     </body>
 
 
