--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1>I'm Tvesha Shah,
                     <br>
                     <div class="carousel"><span class="txt-rotate" data-period="2000"
-                    data-rotate='[ "a student", "a innovator", "an avid reader", "a learner" ]'></span>&nbsp;★</div>
+                    data-rotate='[ "a student", "an innovator", "an avid reader", "a learner" ]'></span>&nbsp;★</div>
                     studying software engineering at McMaster University! </h1>
                     <br> 
                     <h3> Hi! my name is Tvesha Shah and I'm a student based in Vaughan Ontario,  
