--- a/Past Coop's.html
+++ b/Past Coop's.html
@@ -31,9 +31,7 @@
             </div>
         <div class="content"> 
             <div class="projects-wrapper" style="overflow-y:scroll;">
-                <h2> some of my
-                    <a href="https://github.com/txshah" class="underline-link">projects</a>!
-                    <br>
+                <h2> Some of my past coop experiences!
                 </h2>
                 <div class="projects-content-one">
                     <div class="project-desc">
