--- a/Other.html
+++ b/Other.html
@@ -31,7 +31,7 @@
             </div>
         <div class="content"> 
             <div class="projects-wrapper" style="overflow-y:scroll;">
-                <h2> Other Intrests! 
+                <h2> Other Interests! 
                 </h2>
                 <div class="projects-content-one">
                     <div class="project-desc">
