--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
                     <div class="hbtn hbtn-one hbtn-active"><a class href="experience.html">1. About</div></a>
                     <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
                     <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
-                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Intrests</div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Interests</div></a>
                 </div> 
             </div>
         <div class="content"> 
