--- a/Past Coop's.html
+++ b/Past Coop's.html
@@ -23,8 +23,8 @@
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
-                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
-                    <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
+                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-three hbtn-active"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
                     <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Interests</div></a>
 
                 </div> 
@@ -36,7 +36,7 @@
                 <div class="projects-content-one">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
-                            <img src="Images/turbine.png" class="projects-img">
+                            <img src="Images/Multimatic.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
                         <h4>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
-                        <img src="Images/stylus.png" class="projects-img">
+                        <img src="Images/port.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
                         <h4>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce">
-                        <img src="Images/recycle.png" class="projects-img">
+                        <img src="Images/port.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
                         <h4>
