--- a/Other.html
+++ b/Other.html
@@ -36,7 +36,7 @@
                 <div class="projects-content-one">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
-                            <img src="Images/turbine.png" class="projects-img">
+                            <img src="Images/macf1.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
                         <h4>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
-                        <img src="Images/stylus.png" class="projects-img">
+                        <img src="Images/shad.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
                         <h4>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce">
-                        <img src="Images/recycle.png" class="projects-img">
+                        <img src="Images/beta.jpeg" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-3-Revenge-of-the-Recycling-System-a96a5cd121844ce298a0d684714400ce" class="hover-underline-link">
                         <h4>
@@ -100,7 +100,7 @@
                 <div class="projects-content-two">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b">
-                            <img src="Images/robot.png" class="projects-img">
+                            <img src="Images/msom.png" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
                         <h4>
