--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,9 @@
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
-                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
                     <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
-                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Interests</div></a>
+                    <div class="hbtn hbtn-three hbtn-active"><a class href="Other.html"> 4. Other Interests</div></a>
 
                 </div> 
             </div>
@@ -38,7 +38,7 @@
                 <div class="projects-content-one">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2">
-                            <img src="Images/turbine.png" class="projects-img">
+                            <img src="Images/turbine.jpeg" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-1-Renewable-Technology-Challenge-6b241d1d00694d45a15d0fc7e69741b2" class="hover-underline-link">
                         <h4>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920">
-                        <img src="Images/stylus.png" class="projects-img">
+                        <img src="Images/surgery.jpeg" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-4-Power-in-Community-460ac7d1d0c843feb87f333311bc1920" class="hover-underline-link">
                         <h4>
@@ -91,7 +91,7 @@
                 <div class="projects-content-two">
                     <div class="project-desc">
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b">
-                            <img src="Images/robot.png" class="projects-img">
+                            <img src="Images/project.jpeg" class="projects-img">
                         </a>
                         <a href="https://peat-forest-c80.notion.site/Project-2-Get-a-Grip-a06e97bf780c48eb82b378f90400024b" class="hover-underline-link">
                         <h4>
