--- a/Other.html
+++ b/Other.html
@@ -45,16 +45,7 @@
                         </h4>
                         </a>
                         <h5>
-                            MAC Formula Electric is a student-run team from McMaster University working to design, build, and compete with a fully-electric, formula-style racecar.
-
-                            Here are some skills I have learned thus far: 
-                            - Coordinate with team to configure the thermal management system of the formula electric car.
-                            - Collaborate and code with C using GitLab, document progress using Microsoft planner.
-                            - Programming microcontrollers using STM32 IDE.
-                            - Developed & debugged the Embedded Systems used to control various vehicle functions
-                            - Worked with industry-leading families of microcontrollers and development software
-                            - Wrote structured, and reliable embedded C and Python code using industry standards
-                            - Worked on the Raspberry Pi Test Bench and MCU Integration sub-project
+                            MAC Formula Electric is a student-run team from McMaster University working to design, build, and compete with a fully-electric, formula-style racecar. As a proud member of the software and vehicle controls team, I have gained a diverse array of valuable skills. These include effective collaboration within the team to configure the thermal management system of the electric car, adept coding in C using GitLab, and meticulous progress documentation through Microsoft Planner. My experiences have also encompassed the programming of microcontrollers utilizing the STM32 IDE, the development and debugging of Embedded Systems crucial for controlling various vehicle functions, and engagement with cutting-edge microcontroller families and development software. Through these endeavors, I have honed my ability to craft structured, reliable embedded code in both C and Python, adhering closely to industry standards. Furthermore, I have actively contributed to the Raspberry Pi Test Bench and MCU Integration sub-project, showcasing my hands-on involvement in this dynamic and innovative undertaking.
                         </h5>
                     </div>
                     <div class="project-desc">
@@ -67,15 +58,14 @@
                         </h4>
                         </a>
                         <h5>
-                            I completed the SHAD program as a member of the 2021 cohort. If I’m being honest, at first, I was hesitant to accept this offer, given the new online nature of the program. However, looking back now, I am so thankful that I decided to be a part of this life-changing experience. This summer, I was provided with an abundance of opportunities to learn new skills, grow as an individual and connect with many ambitious peers.
-
-                            With an endless supply of fantastic workshops and seminars, I was able to further my logical thinking, coding and other STEM abilities! My favourite lesson was a workshop hosted by FairPlay. This event allowed me to apply the skills I had been building up and switch adapt a toy for children with motor disabilities. This experience showed me how STEM can be used to better the lives of others and how representation in all aspects truly makes a profound difference!
-
-                            Furthermore, I was also able to listen and interact with outstanding keynote speakers. These distinguished individuals not only shared their personal journeys but also helped us discover avenues we had never thought possible!
-
-                            Last but not least, the SHAD program has allowed me to meet such amazing individuals! Through the duration of the summer, I made friendships and connections that I’m sure will last a lifetime!
-
-                            I am so thankful to the Shad Canada community for giving me this opportunity, and to my program directors, facilitators and fellow SHADs for making my SHAD experience so amazing! I can not wait to carry all the knowledge I have gained into other aspects of my life and I am incredibly proud to now call myself a SHAD alumni!
+                            I completed the SHAD program as a member of the 2021 cohort. 
+                            If I’m being honest, at first, I was hesitant to accept this offer, given the new online nature of the program. 
+                            However, looking back now, I am so thankful that I decided to be a part of this life-changing experience. 
+                            This summer, I was provided with an abundance of opportunities to learn new skills, grow as an individual and connect with many ambitious peers.
+                            With an endless supply of fantastic workshops and seminars, I was able to further my logical thinking, coding and other STEM abilities! 
+                            My favourite lesson was a workshop hosted by FairPlay. 
+                            This event allowed me to apply the skills I had been building up and switch adapt a toy for children with motor disabilities. 
+                            This experience showed me how STEM can be used to better the lives of others and how representation in all aspects truly makes a profound difference!
                         </h5>
                     </div>
                     <div class="project-desc">
