--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,9 @@
                 <div class="nav-side"><div class="nav-side-cov"></div></div>
                 <div class="nav">
                     <div class="hbtn hbtn-one"><a class href="experience.html">1. About</div></a>
-                    <div class="hbtn hbtn-two"><a class href="projects.html"> 2. Projects </div></a>
+                    <div class="hbtn hbtn-two hbtn-active"><a class href="projects.html"> 2. Projects </div></a>
                     <div class="hbtn hbtn-three"><a class href="Past Coop's.html"> 3. Past Coops </div></a>
-                    <div class="hbtn hbtn-three hbtn-active"><a class href="Other.html"> 4. Other Interests</div></a>
+                    <div class="hbtn hbtn-three"><a class href="Other.html"> 4. Other Interests</div></a>
 
                 </div> 
             </div>
