--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,7 @@
                             In this project, we focused on remote sensing and actuation for robotic arms in surgical applications. 
                             Our team worked to design a system to transfer a surgical instrument to an autoclave for sterilization securely. 
                             We applied the principles of rapid prototyping and physical computing to develop a computer program and prototype a container with certain specifications. 
-                            We researched the core requirements for a surgical sterilization system and used those concepts to create our solution. As a member of the coding team I worked to create a program that will sort the containers (that appear at random) and place them in the correct location.
-                            This is virtual environment is similar to how sterilization sorting could be executed in the real world. 
+                            We researched the core requirements for a surgical sterilization system and used those concepts to create our solution. As a member of the coding team I worked to create a program that will sort the containers and place them in the correct location.
                         </h5>
                     </div>
                     <div class="project-desc">
